--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "react": "^18.1.0",
     "react-dom": "^18.1.0",
     "react-material-ui-carousel": "^3.4.2",
+    "react-responsive": "^9.0.2",
     "react-router-dom": "^5.3.3",
     "react-scripts": "^5.0.1",
     "web-vitals": "^2.1.4"
