use unified name as IDC Group

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "idc-sh-site",
+  "name": "idc-group-site",
   "version": "0.2.0",
   "homepage": "https://idc-sh.github.io/",
   "private": true,
