--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,6 +1,6 @@
 {
   "short_name": "IDC Group",
-  "name": "Intelligent Digital Creation Group (IDC Group) at Shanghai AI Laboratory",
+  "name": "Intelligent Digital Creation Group (IDC Group) @ Shanghai AI Laboratory",
   "icons": [
     {
       "src": "favicon.ico",
