--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "@mui/icons-material": "^5.14.16",
     "@mui/material": "^5.14.5",
     "@mui/system": "^5.15.2",
+    "caniuse-lite": "^1.0.30001581",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-responsive": "^9.0.2",
